Nuevos jugadores Dioses creados, y Templo funcionando completamente. Hay que eliminar Apocalipsis de la lista de Encantamientos.

--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -18,7 +18,7 @@
                     <span class="fa fa-fw fa-4x fa-user"></span>
                 </div>
                 <div class="info">
-                    <h1 class="text-center">{{ player.nick }}<small>#{{ 12345|nf }}</small></h1>
+                    <h1 class="text-center">{{ player.nick }}</h1>
                     {% for progress in progresses %}
                     <div class="col-xs-12">
                         <div class="progress">
