--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -5,7 +5,7 @@
 {% block fos_user_content %}
 <div class="container">
     <div class="jumbotron text-center">
-        <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
+        <h1>ARCH<sub><i class="fa fa-fw fa-eye"></i></sub>MAGE</h1>
         <h3>- BETA -</h3>
         <form id="login" name="login" class="form-signin" data-toggle="validator" action="{{ path("fos_user_security_check") }}" method="post">
             <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario" value="{{ last_username }}" required />
