--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -77,7 +77,7 @@
                         <div class="col-xs-8 text-padded">
                             {% for construction in player.constructions %}
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-home"></i>{{ construction.quantity|nf }} <span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}">{{ construction.building.name }}</a></span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-home"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span> {{ construction.quantity|nf }}</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -100,10 +100,10 @@
                         <div class="col-xs-8 text-padded">
                             {% for enchantment in player.enchantmentsVictim %}
                             {# row #}
-                                <div class="col-xs-12"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}">{{ enchantment.spell.name }}</a></span> [{{ enchantment.expiration|nf }} / {{ (enchantment.spell.turnsExpiration*enchantment.owner.magic)|nf }}]</div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> ({{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration*enchantment.owner.magic)|nf }})</div>
                             {% else %}
                             {# row #}
-                            <div class="col-xs-12">No tienes ningún encantamiento sobre tu reino</div>
+                            <div class="col-xs-12">Ningún encantamiento en tu templo</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -125,10 +125,10 @@
                         <div class="col-xs-8 text-padded">
                             {% for troop in player.troops %}
                                 {# row #}
-                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i>{{ troop.quantity|nf }} <span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
                             {% else %}
                                 {# row #}
-                                <div class="col-xs-12">No tienes ninguna tropa. Tal vez deberías reclutar alguna.</div>
+                                <div class="col-xs-12">Ninguna tropa en tu ejército</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -151,9 +151,9 @@
                         <div class="col-xs-8 text-padded">
                             {% for contract in player.contracts %}
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}">{{ contract.hero.name }}</a> [{{ contract.hero.level|nf }}]</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> [{{ contract.hero.level|nf }}]</span></div>
                             {% else %}
-                            <div class="col-xs-12">No tienes ningún héroe. Tal vez deberías contratar alguno.</div>
+                            <div class="col-xs-12">Ningún héroe en la taberna</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -173,9 +173,10 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}"><span class="label label-{{ player.research.spell.faction.class }}">{{ player.research.spell.name }}</span></a>{% else %}Ningún hechizo en defensa{% endif %}</div>
+                            <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link"><span class="label label-{{ player.research.spell.faction.class }}">{{ player.research.spell.name }}</span></a>{% else %}Ningún hechizo en defensa{% endif %}</div>
                             {# row #}
-                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.item.spell.name|slug }}"><span class="label label-{{ player.item.artifact.class }}">{{ player.item.spell.name }}</span></a>{% else %}Ningún artefacto en defensa{% endif %}</div>
+                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.item.spell.name|slug }}" class="link"><span class="label label-{{ player.item.artifact.class }}">{{ player.item.spell.name }}</span></a>{% else %}Ningún artefacto en defensa{% endif %}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-shield"></i>{{ player.magicDefense|nf }}% <span class="label label-extra">Defensa Mágica</span></div>
                         </div>
                     </div>
                 </div>
@@ -198,8 +199,6 @@
                             <div class="col-xs-12"><i class="fa fa-fw fa-envelope"></i>{{ player.messages|length|nf }} <span class="label label-extra">Mensajes</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-rocket"></i>{{ player.power|nf }} <span class="label label-extra">Poder</span></div>
-                            {# row #}
-                            {# <div class="col-xs-12"><i class="fa fa-fw fa-crop"></i>Guild</div> #}
                         </div>
                     </div>
                 </div>
