--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -90,7 +90,7 @@
                         <form id="enchantment{{ enchantment.id }}" name="enchantment{{ enchantment.id }}" class="form-inline" action="{{ path('archmage_game_magic_dispell') }}" method="post" role="form">
                             <div class="form-group has-feedback">
                                 <div class="input-group">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-chain-broken"></i>Intentar Desencantar</button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-chain-broken"></i>Desencantar</button>
                                     <input type="hidden" id="enchantment" name="enchantment" value="{{ enchantment.id }}" required />
                                 </div>
                             </div>
