Resources mejor explicados con ganancias y perdidas y con letra peque. Terminado Templo que resta recursos, oro, mana, people. Nuevos nombres de dioses con dragones, tierras, y researchs a tope. Ranking con numero ordenado. Quitados botones con hiddenxs. Arreglado SpellRepository con playerId. Cambiado Favor Naturaleza por Control del Clima.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -85,8 +85,9 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
     color: inherit !important;
 }
 .label {
-    font-size: 95%;
-    padding: 0.1em 0.3em 0.1em 0.3em;
+    font-size: 90%;
+    padding: 0.2em 0.2em 0.1em 0.2em;
+    border: 1px solid black;
 }
 .label-extra {
     background-color: #000000;
