--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -9,7 +9,7 @@
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-line-chart"></i>Ranking</h1>
             </div>
-            <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
+            <table id="datatable" class="table table-striped table-bordered table-condensed text-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th class="text-center"><i class="fa fa-fw fa-list-ol"></i><span class="hidden-xs">Posición</span></th>
@@ -21,9 +21,9 @@
                 <tbody>
                     {% for player in players %}
                     <tr>
-                        <td class="text-right">{{ random(10)|nf }}</td>
+                        <td class="text-right">{{ loop.index|nf }}</td>
                         <td class="text-right">{{ player.power|nff }}</td>
-                        <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'nick': player.nick } ) }}" class="link">{{ player.nick }}</a></span></td>
+                        <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'id': player.id } ) }}" class="link">{{ player.nick }}</a></span></td>
                         <td class="text-right">{{ player.lands|nf }}</td>
                     </tr>
                     {% endfor %}
@@ -40,7 +40,7 @@
     var search = '{{ search }}';
     $(document).ready(function() {
         var oTable = $('#datatable').dataTable({
-            "order": [[ 1, "desc" ]],
+            "order": [[ 1, "asc" ]],
             "aoColumns": [
                 {"sType": "numeric", "bSortable": true },
                 {"sType": "numeric", "bSortable": true },
