--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -7,10 +7,8 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-user-plus"></i>Reclutar
-                    <br>
-                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
-                </h1>
+                <h1><i class="fa fa-fw fa-user-plus"></i>Reclutar</h1>
+                {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
@@ -35,7 +33,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_disband' ) }}"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_disband' ) }}"><i class="fa fa-fw fa-user-times"></i>Desbandar</a>
                 </div>
             </div>
         </div>
@@ -74,7 +72,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Reclutar</span></button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-money"></i>Reclutar</button>
                                 </div>
                                 <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="" value="0" required />
                                 <input type="hidden" id="unit" name="unit" value="{{ unit.id }}" required />
