--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -7,44 +7,34 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-balance-scale"></i>Templo
-                    <br>
-                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
-                </h1>
+                <h1><i class="fa fa-fw fa-balance-scale"></i>Templo</h1>
+                {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">Rezarle a los dioses</div>
+                        <div class="panel-heading text-center">Rezar</div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para intentar recibir una bendición o maldición aleatoria de uno de tus dioses. El éxito o fracaso depende de cuánto ofrezcas. Si se sienten insultados, te arrepentirás...</div>
+                                    <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> para recibir un encantamiento aleatorio de uno de los 5 Dioses, pero exigirán un sacrificio a cambio.</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-middle text-center">Fórmula</div>
+                        <div class="panel-middle text-center">Dioses</div>
                         <div class="panel-body text-responsive">
-                            <div class="row">
-                                <div class="col-xs-12 text-center text-only">
-                                    ENCANTAMIENTO<sub>recibido</sub> = ORO<sub>ofrecido</sub> / ORO<sub>jugador</sub>
-                                </div>
+                            {% for god in gods %}
+                            <div class="col-xs-6 text-center">
+                                <span class="label label-{{ god.faction.class }}"><i class="fa fa-fw fa-rebel"></i><a href="{{ path('archmage_game_account_profile', {'id': god.id}) }}" class="link">{{ god.nick }}</a></span>
                             </div>
+                            {% endfor %}
                         </div>
                         <div class="panel-footer text-center">
                             <form id="temple" name="temple" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_temple') }}" method="post" role="form">
-                                <div class="form-group has-feedback">
-                                    <div class="input-group">
-                                        <div class="input-group-btn">
-                                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Ofrecer</span></button>
-                                        </div>
-                                        <input type="number" class="form-control" id="gold" name="gold" min="1" max="{{ player.gold }}" value="0" required/>
-                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                                    </div>
-                                </div>
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-balance-scale"></i>Sacrificio</button>
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('temple') }}">
                             </form>
                         </div>
