--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -7,10 +7,8 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-graduation-cap"></i>Investigar
-                    <br>
-                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
-                </h1>
+                <h1><i class="fa fa-fw fa-graduation-cap"></i>Investigar</h1>
+                {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
@@ -22,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> para investigar nuevos hechizos. Cuantos más hechizos tengas, mayor será tu nivel de <span class="label label-extra">Magia</span>, y cuantos más <span class="label label-extra">Gremios</span> tengas, más rápido terminaras las investigaciones.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> para investigar nuevos hechizos. Cuantos más hechizos tengas, mayor será tu nivel de <span class="label label-extra">Magia</span>, y cuantos más <span class="label label-extra">Gremios</span> tengas, más rápido investigarás.</div>
                         </div>
                     </div>
                 </div>
@@ -35,7 +33,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-wrench"></i><span class="hidden-xs">Construir</span></a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-wrench"></i>Construir</a>
                 </div>
             </div>
         </div>
@@ -71,7 +69,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Investigar</span></button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Investigar</button>
                                 </div>
                                 <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
                                 <input type="hidden" id="research" name="research" value="{{ research.id }}" required />
@@ -117,7 +115,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Investigar</span></button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Investigar</button>
                                 </div>
                                 <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
                                 <input type="hidden" id="spell" name="spell" value="{{ spell.id }}" required />
