--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -7,10 +7,8 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-wrench"></i>Construir
-                    <br>
-                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
-                </h1>
+                <h1><i class="fa fa-fw fa-wrench"></i>Construir</h1>
+                {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
         {% for construction in player.constructions %}
@@ -60,7 +58,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-wrench"></i><span class="hidden-xs">Construir</span></button>
+                                    <button type="submit" class="btn btn-default" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-wrench"></i>Construir</button>
                                 </div>
                                 <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.construction('Tierras').quantity }}" value="0" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
                                 <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
@@ -69,7 +67,7 @@
                         </div>
                     </form>
                     {% else %}
-                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-search"></i><span class="hidden-xs">Explorar</span></a>
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-search"></i>Explorar</a>
                     {% endif %}
                 </div>
             </div>
