--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -28,7 +28,7 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-12 text-center text-only">
-                            PROB<sub>éxito</sub> = MAX(75, 100 - BARRERAS<sub>jugador</sub> * 1 / 100)
+                            PROB<sub>éxito</sub> = MIN(75, BARRERAS<sub>jugador</sub> * 10 / 100)
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        {% for enchantment in player.enchantmentsOwner %}
+        {% for enchantment in player.enchantmentsVictim %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ enchantment.spell.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></div>
@@ -48,7 +48,12 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-12">{{ enchantment.spell.skill.description|raw }}</div>
+                            <div class="col-xs-9"><i class="fa fa-fw fa-rebel"></i><span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></label></div>
+                            <div class="col-xs-3"><i class="fa fa-fw fa-magic"></i>{{ enchantment.owner.magic|nf }}</div>
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-hourglass"></i>{{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration * enchantment.owner.magic)|nf }}</div>
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ enchantment.spell.skill.description|raw }}</div>
                             {# row #}
                             <div class="col-xs-12 text-lore"><small><i>"{{ enchantment.spell.lore }}"</i></small></div>
                         </div>
@@ -66,36 +71,6 @@
                 </div>
             </div>
         </div>
-        {% endfor %}
-        {% for enchantment in player.enchantmentsVictim %}
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-{{ enchantment.spell.faction.class }}">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a> [{{ enchantment.owner.nick }}]</div>
-                    <div class="panel-body text-responsive">
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset( enchantment.spell.image ) }}">
-                            </div>
-                            <div class="col-xs-8 text-padded">
-                                {# row #}
-                                <div class="col-xs-12">{{ enchantment.spell.skill.description|raw }}</div>
-                                {# row #}
-                                <div class="col-xs-12 text-lore"><small><i>"{{ enchantment.spell.lore }}"</i></small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel-footer text-center">
-                        <form id="enchantment{{ enchantment.id }}" name="enchantment{{ enchantment.id }}" class="form-inline" action="{{ path('archmage_game_magic_dispell') }}" method="post" role="form">
-                            <div class="form-group has-feedback">
-                                <div class="input-group">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-chain-broken"></i>Desencantar</button>
-                                    <input type="hidden" id="enchantment" name="enchantment" value="{{ enchantment.id }}" required />
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
         {% endfor %}
         {% if player.enchantmentsOwner and player.enchantmentsVictim is empty %}
         <div class="container">
